--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Estilos/Apuntes.sty
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Estilos/Apuntes.sty
@@ -156,7 +156,7 @@
 \renewcommand{\thenota}{%
               \thechapter.\arabic{nota}}
 %%
-\def\Nota{\refstepcounter{nota}\paragraph{Nota\ \thenota}}
+\def\Nota{\refstepcounter{nota}\paragraph{Note\ \thenota}}
 %%
 \newcommand{\FinNota}
            {\par\hfill{\ensuremath{\blacksquare}}\par}
