Completada memoria de prácticas a falta de poner la duración

--- a/4 GII/Prácticas/Memoria/Memoria prácticas Jesús Rodríguez Heras.tex
+++ b/4 GII/Prácticas/Memoria/Memoria prácticas Jesús Rodríguez Heras.tex
@@ -125,28 +125,68 @@
 \textcolor{red}{¿Qué pongo aquí, solo tres meses?}
 
 \subsection{Horarios (flexibilidad)}
-
+El horario era de lunes a viernes de 9 a 14 y, si por casualidad necesitaba no ir un día por cualquier motivo, recuperaba las horas que le debía a la empresa para compensarlas.
 
 \subsection{Breve descripción de la empresa}
-
+Es una mediana empresa que se subdivide en varias empresas más pequeñas:
+\begin{itemize}
+	\item \textbf{Sea Master Consulting \& Engineering:} Empresa principal que se encarga de la gestión del resto de empresas. Yo pertenecía a ésta debido a que el trabajo de infraestructura de red está a cargo de esta empresa.
+	\item \textbf{Sea Master Solutions:} Empresa encargada de gestión documental (BlueCielo Share Point).
+	\item \textbf{Sea Master Engineering:} Empresa encargada de la ingeniería naval y sus diferentes especialidades.
+	\item \textbf{Xperience Naval Architects:} Empresa dedicada al diseño de yates de lujo.
+	\item \textbf{Vihomodel:} Empresa dedicada a la realidad virtual usando las Microsoft Hololens. Yo también pertenecía a ésta debido a que necesitaban ayuda con las aplicaciones de dicho dispositivo.
+\end{itemize}
 
 
 \section{Líneas de trabajo}
 \subsection{Actuaciones previstas inicialmente}
+\begin{itemize}
+	\item Desarrollos para la realidad aumentada:
+	\begin{itemize}
+		\item Mejora del proyecto Vihomodel.
+		\item Adaptación de proyectos de Hololens v1 a Hololens v2.
+		\item Desarrollo de software de mantenimiento remoto.
+	\end{itemize}
+	\item Mantenimiento de redes y sistemas de Sea Master. Este puesto tiene como principales funciones:
+	\begin{itemize}
+		\item Gestión de servidores físicos y virtuales y de sus backup.
+		\item Directorio activo.
+		\item Instalación de equipos.
+		\item Gestión del dominio.
+		\item Soporte interno (instalación de software, CAUs, etc…).
+	\end{itemize}
+\end{itemize}
+
 
 \subsection{Actividades que realmente has llevado a cabo en la empresa}
+Aparte de las mencionadas en el apartado anterior, también he dedicado tiempo a la creación de dos páginas web para la empresa ya que era necesario modificar una y hacer de cero otra.
+
+También he dedicado tiempo a ayudar a la gente de Sea Master Solutions en la programación de una aplicación que genera un PDF a partir de un archivo CAD (plano de un barco) coloreado de tal forma que indique el tipo de trabajo que se está llevando a cabo en un barco.
 
 \subsection{Competencias y conocimientos adquiridos durante el transcurso de las prácticas}
-
+\begin{itemize}
+	\item Programación en C\#.
+	\item Programación de aplicaciones en Unity.
+	\item Programación de aplicaciones que usen recursos del sistema como abrir programas y cerrarlos en función de unos parámetros.
+	\item Creación de máquinas virtuales en servidores usando MV ware Sphere.
+	\item Gestión de copias de seguridad en red.
+\end{itemize}
 
 \section{Valoración crítica personal}
 \subsection{Aspectos más positivos y negativos de las prácticas}
+El aspecto más positivo que cabe destacar es la flexibilidad horaria ya que son bastante flexibles en este aspecto.
 
-\subsection{Te gustaría poder trabajar en un futuro en la empresa? ¿Recomendarías las prácticas a otros alumnos?}
+También, es de destacar la buena relación personal que existe entre todos los empleados de la empresa ya que me sentí acogido desde el primer día.
 
-\subsection{La duración de las prácticas ha sido adecuada? ¿El seguimiento por parte de la empresa ha sido correcto?}
+\subsection{¿Te gustaría poder trabajar en un futuro en la empresa? ¿Recomendarías las prácticas a otros alumnos?}
+Sí, me gustaría trabajar en un futuro con ellos, ya que son bastante acogedores y el puesto de trabajo que he estado desempeñando desde que entré me gusta bastante ya que es uno de los trabajos que yo tenía como meta profesional.
+
+También recomendaría esta empresa a mis compañeros de la carrera para que encuentren una empresa que les ayude a crecer tanto en el ámbito profesional como en el ámbito personal.
+
+\subsection{¿La duración de las prácticas ha sido adecuada? ¿El seguimiento por parte de la empresa ha sido correcto?}
+La duración de las prácticas ha sido adecuada y el seguimiento por parte de mi tutor en la empresa ha sido correcto ya que, siempre que he tenido algún problema, ha sabido asesorarme para que pudiera resolverlo de la mejor forma posible.
 
 \subsection{Otros aspectos que consideres de interés}
-
+El aspecto que más me gustaría resaltar es el trato que tienen todos los empleados entre ellos y el que tuvieron conmigo desde el principio, excepto algunos comentarios que, bajo mi perspectiva, sobraba, pero nada que no se solucionase hablando.
 
 \end{document}
