--- a/4 GII/Prácticas/Memoria/Memoria prácticas Jesús Rodríguez Heras.tex
+++ b/4 GII/Prácticas/Memoria/Memoria prácticas Jesús Rodríguez Heras.tex
@@ -122,10 +122,10 @@
 \end{itemize}
 
 \subsection{Periodo de realización}
-\textcolor{red}{¿Qué pongo aquí, solo tres meses?}
+Del 25 de junio de 2019 al 23 de diciembre de 2019.
 
 \subsection{Horarios (flexibilidad)}
-El horario era de lunes a viernes de 9 a 14 y, si por casualidad necesitaba no ir un día por cualquier motivo, recuperaba las horas que le debía a la empresa para compensarlas.
+El horario era de lunes a viernes de 9 a 14 y, si por casualidad necesitaba no ir un día por cualquier motivo, recuperaba las horas que le debía a la empresa para compensarlas los días siguientes.
 
 \subsection{Breve descripción de la empresa}
 Es una mediana empresa que se subdivide en varias empresas más pequeñas:
@@ -159,34 +159,42 @@ Es una mediana empresa que se subdivide en varias empresas más pequeñas:
 
 
 \subsection{Actividades que realmente has llevado a cabo en la empresa}
-Aparte de las mencionadas en el apartado anterior, también he dedicado tiempo a la creación de dos páginas web para la empresa ya que era necesario modificar una y hacer de cero otra.
+Aparte de las mencionadas en el apartado anterior, también he dedicado tiempo a la creación de dos páginas web para la empresa ya que era necesario modificar una (\url{www.vihomodel.com}) y hacer de cero otra (\url{www.xpna.eu}).
 
-También he dedicado tiempo a ayudar a la gente de Sea Master Solutions en la programación de una aplicación que genera un PDF a partir de un archivo CAD (plano de un barco) coloreado de tal forma que indique el tipo de trabajo que se está llevando a cabo en un barco.
+También he dedicado tiempo a ayudar a la gente de Sea Master Solutions en la programación de una aplicación que genera un PDF a partir de un archivo CAD (plano de un barco) coloreado de tal forma que indique el tipo de trabajo que se está llevando a cabo en los locales de un barco y sus incompatibilidades.
 
 \subsection{Competencias y conocimientos adquiridos durante el transcurso de las prácticas}
 \begin{itemize}
 	\item Programación en C\#.
 	\item Programación de aplicaciones en Unity.
 	\item Programación de aplicaciones que usen recursos del sistema como abrir programas y cerrarlos en función de unos parámetros.
-	\item Creación de máquinas virtuales en servidores usando MV ware Sphere.
-	\item Gestión de copias de seguridad en red.
+	\item Creación de máquinas virtuales en servidores usando MV Ware Sphere.
+	\item Gestión de copias de seguridad en red y locales.
+	\item Gestión de CAU's.
+	\item Gestión de equipos.
+	\item Tratamiento de clientes impacientes.
 \end{itemize}
 
 \section{Valoración crítica personal}
 \subsection{Aspectos más positivos y negativos de las prácticas}
-El aspecto más positivo que cabe destacar es la flexibilidad horaria ya que son bastante flexibles en este aspecto.
+El aspecto más positivo que cabe destacar es la flexibilidad horaria ya que son bastante flexibles en este aspecto y me permitieron gestionarme mis propias ``vacaciones'' acumulando horas extra.
 
 También, es de destacar la buena relación personal que existe entre todos los empleados de la empresa ya que me sentí acogido desde el primer día.
+
+El aspecto negativo a destacar es la falta de seriedad ya que nos encontramos en un ambiente empresarial y hay que tener en cuenta que las personas que hay ahí son compañeros de trabajo, no amigos de toda la vida con los que se pueda bromear (de diferentes formas).
 
 \subsection{¿Te gustaría poder trabajar en un futuro en la empresa? ¿Recomendarías las prácticas a otros alumnos?}
 Sí, me gustaría trabajar en un futuro con ellos, ya que son bastante acogedores y el puesto de trabajo que he estado desempeñando desde que entré me gusta bastante ya que es uno de los trabajos que yo tenía como meta profesional.
 
-También recomendaría esta empresa a mis compañeros de la carrera para que encuentren una empresa que les ayude a crecer tanto en el ámbito profesional como en el ámbito personal.
+Sin embargo, a la hora de la verdad, me han dado la escusa de ``no tienes el perfil que buscamos realmente'' y, cuando pregunté qué necesitaban, me respondió el CEO de la empresa (Luis) ``Becarios hay siempre''. Por lo que creo que les sale más rentable tener un becario ejerciendo el puesto que una persona con puesto fijo.
+
+También recomendaría esta empresa a mis compañeros de la carrera para que encuentren una empresa que les ayude a crecer un poco en el ámbito profesional pero deben tener cuidado porque una vez acabada la beca, probablemente no les dejen continuar.
 
 \subsection{¿La duración de las prácticas ha sido adecuada? ¿El seguimiento por parte de la empresa ha sido correcto?}
 La duración de las prácticas ha sido adecuada y el seguimiento por parte de mi tutor en la empresa ha sido correcto ya que, siempre que he tenido algún problema, ha sabido asesorarme para que pudiera resolverlo de la mejor forma posible.
 
 \subsection{Otros aspectos que consideres de interés}
-El aspecto que más me gustaría resaltar es el trato que tienen todos los empleados entre ellos y el que tuvieron conmigo desde el principio, excepto algunos comentarios que, bajo mi perspectiva, sobraba, pero nada que no se solucionase hablando.
+El aspecto que más me gustaría resaltar es el convenio de trabajo en cuanto a las horas de trabajo ya que si un trabajador hace horas extra, no se las pagan, sino que se la dan de vacaciones, cosa que me parece bastante mal personalmente hablando, claro está.
+
 
 \end{document}
