Corregida y enviada la memoria de prácticas

--- a/4 GII/Prácticas/Memoria/Memoria prácticas Jesús Rodríguez Heras.tex
+++ b/4 GII/Prácticas/Memoria/Memoria prácticas Jesús Rodríguez Heras.tex
@@ -14,7 +14,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Ajusta maergenes para a4
-%\usepackage{a4wide}
+\usepackage{a4wide}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Uso fuente postscript times, para que los ps y pdf queden y pequeños...
@@ -45,7 +45,7 @@
 %% Fuentes matematicas lo mas compatibles posibles con postscript (times)
 %% (Esto no funciona para todos los simbolos pero reduce mucho el tamaño del
 %% pdf si hay muchas matamaticas....
-\usepackage{mathptm}
+%\usepackage{mathptm}
 
 %%% VARIOS:
 %\usepackage{slashbox}
@@ -107,7 +107,7 @@
 \begin{itemize}
 	\item \textbf{Empresa:} Sea Master Consulting \& Engineering.
 	\begin{itemize}
-		\item \textbf{Dirección:} C/ Manatial13, Edif. CEEI, Polígono Industrial Las Salinas, 11500,El Puerto de Santa María, Cádiz.
+		\item \textbf{Dirección:} C/ Manatial 13, Edif. CEEI, Polígono Industrial Las Salinas, 11500,El Puerto de Santa María, Cádiz.
 		\item \textbf{Teléfono:} 956 10 11 23.
 	\end{itemize}
 	\item \textbf{Tutor laboral:} Joaquín Galindo Mengibar (jgalindo@sea-master.eu).
@@ -168,7 +168,7 @@ También he dedicado tiempo a ayudar a la gente de Sea Master Solutions en la pr
 	\item Programación en C\#.
 	\item Programación de aplicaciones en Unity.
 	\item Programación de aplicaciones que usen recursos del sistema como abrir programas y cerrarlos en función de unos parámetros.
-	\item Creación de máquinas virtuales en servidores usando MV Ware Sphere.
+	\item Creación de máquinas virtuales en servidores usando VM Ware Sphere.
 	\item Gestión de copias de seguridad en red y locales.
 	\item Gestión de CAU's.
 	\item Gestión de equipos.
@@ -186,7 +186,7 @@ El aspecto negativo a destacar es la falta de seriedad ya que nos encontramos en
 \subsection{¿Te gustaría poder trabajar en un futuro en la empresa? ¿Recomendarías las prácticas a otros alumnos?}
 Sí, me gustaría trabajar en un futuro con ellos, ya que son bastante acogedores y el puesto de trabajo que he estado desempeñando desde que entré me gusta bastante ya que es uno de los trabajos que yo tenía como meta profesional.
 
-Sin embargo, a la hora de la verdad, me han dado la escusa de ``no tienes el perfil que buscamos realmente'' y, cuando pregunté qué necesitaban, me respondió el CEO de la empresa (Luis) ``Becarios hay siempre''. Por lo que creo que les sale más rentable tener un becario ejerciendo el puesto que una persona con puesto fijo.
+Sin embargo, a la hora de la verdad, me han dado la excusa de ``no tienes el perfil que buscamos realmente'' y, cuando pregunté qué necesitaban, me respondió el CEO de la empresa (Luis) ``Becarios hay siempre''. Por lo que creo que les sale más rentable tener un becario ejerciendo el puesto que una persona con puesto fijo.
 
 También recomendaría esta empresa a mis compañeros de la carrera para que encuentren una empresa que les ayude a crecer un poco en el ámbito profesional pero deben tener cuidado porque una vez acabada la beca, probablemente no les dejen continuar.
 
